<resources>
    <string name="app_name">Beamio</string>
    <string name="incoming_call_body">Incoming voice call</string>
    <string name="incoming_call_glass_subtitle">Beamio · Incoming voice call</string>
    <string name="incoming_call_decline">Decline</string>
    <string name="incoming_call_mute">Mute</string>
    <string name="incoming_call_answer">Answer</string>
    <string name="incoming_call_muted_title">Muted</string>
    <string name="incoming_call_muted_text">Waiting to time out</string>
</resources>